<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/post_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_match"
            android:icon="@drawable/create_icon"
            android:title="@string/menu_createMatch" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_matchHistory" />
        <item
            android:id="@+id/nav_fHistory"
            android:icon="@drawable/ic_cricket"
            android:title="@string/menu_friendsMatch" />
    </group>
</menu>