<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cricketapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cricketapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cricketapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_match"
        android:name="com.example.cricketapp.ui.create_match.create_match"
        android:label="Create Match"
        tools:layout="@layout/fragment_create_match" />
    <fragment
        android:id="@+id/nav_fHistory"
        android:name="com.example.cricketapp.ui.fHIstory.friend_match_history"
        android:label="Matches created by your freinds"
        tools:layout="@layout/fragment_friend_match_history" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.cricketapp.ui.matchHistory.match_history"
        android:label="Matches created by you"
        tools:layout="@layout/fragment_match_history" />
</navigation>